      --sejk-f=RANGE[,RANGE] f(0,j)=(GFa0 U X^j(b)), f(i,j)=(GFai U
                             G(f(i-1,j)))
      --sejk-j=RANGE         (GFa1&...&GFan) -> (GFb1&...&GFbn)
      --sejk-k=RANGE         (GFa1|FGb1)&...&(GFan|FGbn)
      --sejk-patterns[=RANGE]   φ₁,φ₂,φ₃ from Sikert et al's [CAV'16]
                             paper (range should be included in 1..3)

  Library:

  - spot::twa_graph::merge_states() is a new method that merges states
    with the exact same outgoing edges. As it performs no reordering of
    the edges, it is better to call it when you know that the edges in
    the twa_graph are sorted (e.g. after a call to merge_edges()).

  - You can now specify to Spot the number of acceptance marks you
    wish to use. This is a compile-time option, accessible through
    option --enable-max-accsets of the configure script. The default
    is still 32, but this limit is no longer hardcoded.

  - Option "a" of print_dot(), for printing the acceptance condition,
    is now enabled by default.  Option "A", introduced in Spot 2.4,
    can be used to hide the acceptance condition in case you do not
    want it.  This change of course affects the --dot option of all
    the command-line tools, as well as the various way to display
    automata using the Python bindings.

  - When option "1" is passed to print_dot() to hide state names
    and force the display of state numbers, the actual state names
    is now moved to the "tooltip" field of the state.  The SVG
    files produced by "dot -Tsvg" will show those as popups.
    This is also done for state labels of kripke structures.

  - print_dot() will now name the output digraph using the name of the
    automaton if available, or the empty string otherwise.  (Previous
    versions used to call all digraphs "G".)  This name appears as a
    tooltip in SVG figures when the mouse is over the acceptance
    condition.

  - print_dot() has a new option "u" to hide "true states" behind