@@ -110,8 +110,8 @@ static const argp_option options[] =
     { "kv-psi", gen::LTL_KV_PSI, "RANGE", 0,
       "quadratic formula with doubly exponential DBA", 0 },
     OPT_ALIAS(kr-n2),
-    { "ms-example", gen::LTL_MS_EXAMPLE, "RANGE", 0,
-      "GF(a1&X(a2&X(a3&...)))&F(b1&F(b2&F(b3&...)))", 0 },
+    { "ms-example", gen::LTL_MS_EXAMPLE, "RANGE[,RANGE]", 0,
+      "GF(a1&X(a2&X(a3&...Xan)))&F(b1&F(b2&F(b3&...&Xbm)))", 0 },
     { "ms-phi-h", gen::LTL_MS_PHI_H, "RANGE", 0,
       "FG(a|b)|FG(!a|Xb)|FG(a|XXb)|FG(!a|XXXb)|...", 0 },
     { "ms-phi-r", gen::LTL_MS_PHI_R, "RANGE", 0,
