@@ -154,43 +154,63 @@ test $(genltl --kr-nlogn=4 | ltl2tgba --low --stats=%s) -ge 16
 test $(genltl --kr-n=4 | ltl2tgba --low --stats=%s) -ge 16
 
 genltl --ms-example=0..4 --ms-phi-r=0..2 --ms-phi-s=0..2 --ms-phi-h=0..4 \
-       --gf-equiv=0..5 --gf-implies=0..5 --format=%F=%L,%f |
+       --gf-equiv=0..5 --gf-implies=0..5 --format='"%F=%L",%f' |
     ltl2tgba -G -D -F-/2 --stats='%<,%s' > out
 cat >exp<<EOF
-ms-example=0,1
-ms-example=1,2
-ms-example=2,4
-ms-example=3,7
-ms-example=4,12
-ms-phi-r=0,2
-ms-phi-r=1,16
-ms-phi-r=2,29
-ms-phi-s=0,5
-ms-phi-s=1,8
-ms-phi-s=2,497
-ms-phi-h=0,1
-ms-phi-h=1,3
-ms-phi-h=2,7
-ms-phi-h=3,15
-ms-phi-h=4,31
-gf-equiv=0,1
-gf-equiv=1,4
-gf-equiv=2,8
-gf-equiv=3,21
-gf-equiv=4,81
-gf-equiv=5,431
-gf-implies=0,1
-gf-implies=1,5
-gf-implies=2,12
-gf-implies=3,41
-gf-implies=4,186
-gf-implies=5,1047
+"ms-example=0,0",1
+"ms-example=0,1",2
+"ms-example=0,2",3
+"ms-example=0,3",4
+"ms-example=0,4",5
+"ms-example=1,0",1
+"ms-example=1,1",2
+"ms-example=1,2",3
+"ms-example=1,3",4
+"ms-example=1,4",5
+"ms-example=2,0",2
+"ms-example=2,1",3
+"ms-example=2,2",4
+"ms-example=2,3",5
+"ms-example=2,4",6
+"ms-example=3,0",4
+"ms-example=3,1",5
+"ms-example=3,2",6
+"ms-example=3,3",7
+"ms-example=3,4",8
+"ms-example=4,0",8
+"ms-example=4,1",9
+"ms-example=4,2",10
+"ms-example=4,3",11
+"ms-example=4,4",12
+"ms-phi-r=0",2
+"ms-phi-r=1",16
+"ms-phi-r=2",29
+"ms-phi-s=0",5
+"ms-phi-s=1",8
+"ms-phi-s=2",497
+"ms-phi-h=0",1
+"ms-phi-h=1",3
+"ms-phi-h=2",7
+"ms-phi-h=3",15
+"ms-phi-h=4",31
+"gf-equiv=0",1
+"gf-equiv=1",4
+"gf-equiv=2",8
+"gf-equiv=3",21
+"gf-equiv=4",81
+"gf-equiv=5",431
+"gf-implies=0",1
+"gf-implies=1",5
+"gf-implies=2",12
+"gf-implies=3",41
+"gf-implies=4",186
+"gf-implies=5",1047
 EOF
 diff out exp
 
 # Running ltl2tgba on one formula at a time should give the same results
 genltl --ms-example=0..4 --ms-phi-r=0..2 --ms-phi-s=0..2 --ms-phi-h=0..4 \
-       --gf-equiv=0..5 --gf-implies=0..5 --format=%F=%L,%f |
+       --gf-equiv=0..5 --gf-implies=0..5 --format='"%F=%L",%f' |
     ltldo -F-/2 'ltl2tgba -G -D' --stats='%<,%s' > out
 diff out exp
 
