@@ -34,6 +34,9 @@ New in spot 2.5.3.dev  (not yet released)
       --sejk-patterns[=RANGE]   φ₁,φ₂,φ₃ from Sikert et al's [CAV'16]
                              paper (range should be included in 1..3)
 
+  - genltl --ms-example can now take a two-range argument,
+    (as --sejk-f above).
+
   Library:
 
   - spot::twa_graph::merge_states() is a new method that merges states
